--- a/modelo2.html
+++ b/modelo2.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+      <nav>
+
+      </nav>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+      
+    </footer>
     <script type=" text/javascript" src="js/script.js"></script>
   </body>
 </html>
