--- a/modelo2.html
+++ b/modelo2.html
@@ -13,7 +13,7 @@
       </nav>
     </header>
     <section>
-
+      <button id="btn-calcular">Calcular</button>
     </section>
     <footer>
       
