Finalizando a criação da função soma no JS

--- a/modelo2.html
+++ b/modelo2.html
@@ -13,6 +13,8 @@
       </nav>
     </header>
     <section>
+      <input type="text" id="valor-a">
+      <input type="text" id="valor-b">
       <button id="btn-calcular">Calcular</button>
     </section>
     <footer>
