--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,7 +8,7 @@
   <body>
     <button>OK</button>
     <button class="btn btn-primary">OK</button>
-    <button class="btn btn-danger">ALERT</button>
+   <!-- <button class="btn btn-danger">ALERT</button>-->
     <script type=" text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
