--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,7 +7,15 @@
   </head>
   <body>
     <button>OK</button>
-    <button class="btn btn-primary">OK</button>
+    <button class="btn btn-warning btn-lg">OK</button>
+
+    <h3>Example heading <span class="label label-success">2</span></h3>
+
+    <a href="#">Inbox <span class="badge">42</span></a>
+    <div class="alert alert-success" role="alert">
+      <strong>Well done!</strong> You successfully read this important alert message.
+    </div>
+    
    <!-- <button class="btn btn-danger">ALERT</button>-->
     <script type=" text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   </body>
