--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,15 +6,28 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   </head>
   <body>
-    <button>OK</button>
-    <button class="btn btn-warning btn-lg">OK</button>
 
-    <h3>Example heading <span class="label label-success">2</span></h3>
-
-    <a href="#">Inbox <span class="badge">42</span></a>
-    <div class="alert alert-success" role="alert">
-      <strong>Well done!</strong> You successfully read this important alert message.
-    </div>
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">E-mail address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputFile">Selecione o arquivo</label>
+        <input type="file" id="exampleInputFile">
+        <p class="help-block">Examplo de texto de ajuda.</p>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Eu li e aceito os termos
+        </label>
+      </div>
+      <button type="submit" class="btn btn-default">Enviar</button>
+    </form>
     
    <!-- <button class="btn btn-danger">ALERT</button>-->
     <script type=" text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
