--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   </head>
   <body>
-
+<!--criando formulário -->
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">E-mail address</label>
