Inserindo ação ao formulário

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,10 +7,10 @@
   </head>
   <body>
 <!--criando formulário -->
-    <form>
+    <form action="contato.php">
       <div class="form-group">
         <label for="exampleInputEmail1">E-mail address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" required>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
@@ -23,7 +23,7 @@
       </div>
       <div class="checkbox">
         <label>
-          <input type="checkbox"> Eu li e aceito os termos
+          <input type="checkbox"> Eu li e aceito os termos de uso.
         </label>
       </div>
       <button type="submit" class="btn btn-default">Enviar</button>
