--- a/formulario.html
+++ b/formulario.html
@@ -7,11 +7,22 @@
   </head>
   <body>
 <!--criando formulário -->
-      <form>
-          <div>
+      <form method="post" action="form.php">
+          <div class="form-group">
               <label for="nome"> Nome </label>
               <input type="text" name="nome" id="nome" class="form-control" placeholder="digite o seu nome!" required>
           </div>
+          <div class="form-group">
+            <label for="email"> E-mail </label>
+            <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br!" required>
+        </div>
+        <div class="form-group">
+            <label for="nascimento"> Nascimento </label>
+            <input type="date" name="nascimento" id="nascimento" class="form-control" required min="2022-01-15" max="2022-09-29">
+        </div>
+        <div>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+        </div>
       </form>
        
   
