Incluindo genero masculino ou femiino

--- a/formulario.html
+++ b/formulario.html
@@ -20,6 +20,13 @@
             <label for="nascimento"> Nascimento </label>
             <input type="date" name="nascimento" id="nascimento" class="form-control" required min="2022-01-15" max="2022-09-29">
         </div>
+        <div class="form-group">
+            <label> Sexo </label>
+            <input type="radio" sexo="masculino" id="masculino" class="form-control">
+            <label for="masculino">Masculino</label>
+            <input type="radio" sexo="feminino" id="feminino" class="form-control">
+            <label for="feminino">Feminino</label>
+        </div>
         <div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
