--- a/formulario.html
+++ b/formulario.html
@@ -22,9 +22,9 @@
         </div>
         <div class="form-group">
             <label> Sexo </label>
-            <input type="radio" name="sexo" id="masculino" class="form-control">
+            <input type="radio" name="sexo" id="masculino">
             <label for="masculino">Masculino</label>
-            <input type="radio" name="sexo" id="feminino" class="form-control">
+            <input type="radio" name="sexo" id="feminino">
             <label for="feminino">Feminino</label>
         </div>
         <div>
