--- a/formulario.html
+++ b/formulario.html
@@ -27,6 +27,9 @@
             <input type="radio" name="sexo" id="feminino">
             <label for="feminino">Feminino</label>
         </div>
+        <div class="form-group">
+            <label for="Li"> Li o contrato </label>
+            <input type="checkbox" name="Li" id="Li" class="form-control" required>
         <div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
