Inserindo controle de volume

--- a/formulario.html
+++ b/formulario.html
@@ -29,8 +29,12 @@
         </div>
         <div class="form-group">
             <label for="Li"> Li o contrato </label>
-            <input type="checkbox" name="Li" id="Li" class="form-control" required>
+            <input type="checkbox" name="Li" id="Li" required checked>
         <div>
+        <div class="form-group">
+            <label for="volume"> Volume </label>
+            <input type="range" name="volume" id="volume" min="0" max="100" value="25">
+        <div>    
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
