Mostrador de bateria

--- a/formulario.html
+++ b/formulario.html
@@ -34,6 +34,10 @@
         <div class="form-group">
             <label for="volume"> Volume </label>
             <input type="range" name="volume" id="volume" min="0" max="100" value="25">
+        <div> 
+        <div class="form-group">
+            <label for="mater"> Bateria </label>
+            <meter min="0" max="100" low="15" value="12">12</meter>
         <div>    
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
