Usado tag meter

--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,11 @@
         <div> 
         <div class="form-group">
             <label for="mater"> Bateria </label>
-            <meter min="0" max="100" low="15" value="12">12</meter>
+            <meter min="0" name="meter" max="100" low="15" value="12">12</meter>
+        <div>
+        <div class="form-group">
+            <label for="mater"> Carregando </label>
+            <meter min="0" name="meter" max="100" low="15" value="12">12</meter>
         <div>    
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
