--- a/formulario.html
+++ b/formulario.html
@@ -41,7 +41,7 @@
         <div>
         <div class="form-group">
             <label for="mater"> Carregando </label>
-            <meter min="0" name="meter" max="100" low="15" value="12">12</meter>
+            <progress min="0" name="meter" max="100" value="60">60%</progress>
         <div>    
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
