validação por número

--- a/formulario.html
+++ b/formulario.html
@@ -42,7 +42,11 @@
         <div class="form-group">
             <label for="mater"> Carregando </label>
             <progress min="0" name="meter" max="100" value="60">60%</progress>
-        <div>    
+        <div>   
+        <div class="form-group">
+            <label for="ano"> Ano Fabricação </label>
+            <input type="number" name="ano" id="ano" min="1920" step="4" max="2024" value="2024" class="form-control">
+        </div> 
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
