validação por cor

--- a/formulario.html
+++ b/formulario.html
@@ -47,6 +47,10 @@
             <label for="ano"> Ano Fabricação </label>
             <input type="number" name="ano" id="ano" min="1920" step="4" max="2024" value="2024" class="form-control">
         </div> 
+        <div class="form-group">
+            <label for="cor"> Cor </label>
+            <input type="color" name="cor" id="cor" class="form-control">
+        </div> 
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
