--- a/formulario.html
+++ b/formulario.html
@@ -51,6 +51,10 @@
             <label for="cor"> Cor </label>
             <input type="color" name="cor" id="cor" class="form-control">
         </div> 
+        <div class="form-group">
+            <label for="url"> URL </label>
+            <input type="search" name="url" id="url" class="form-control">
+        </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
