limite de texto, quebra de linha

--- a/formulario.html
+++ b/formulario.html
@@ -50,10 +50,18 @@
         <div class="form-group">
             <label for="cor"> Cor </label>
             <input type="color" name="cor" id="cor" class="form-control">
-        </div> 
+        </div>
         <div class="form-group">
             <label for="url"> URL </label>
-            <input type="search" name="url" id="url" class="form-control">
+            <input type="url" name="url" id="url" class="form-control">
+        </div> 
+        <div class="form-group">
+            <label for="busca"> Busca </label>
+            <input type="search" name="busca" id="busca" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="mensagem"> Mensagem </label>
+            <textarea type="mensagem" name="mensagem" cols="30" rows="10"></textarea>
         </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
