--- a/formulario.html
+++ b/formulario.html
@@ -63,6 +63,14 @@
             <label for="mensagem"> Mensagem </label>
             <textarea type="mensagem" name="mensagem" cols="30" rows="10"></textarea>
         </div>
+        <div class="form-group">
+            <label for="estados"> Estados </label>
+            <select name="estados" id="estados">
+                <option value="SP">São Paulo</option>
+                <option value="MG" selected>Minas Gerais</option>
+                <option value="RJ">Rio de Janeiro</option>
+            </select>
+        </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
