--- a/formulario.html
+++ b/formulario.html
@@ -71,6 +71,20 @@
                 <option value="RJ">Rio de Janeiro</option>
             </select>
         </div>
+
+        <div class="form-group">
+            <label for="estados"> Estados </label>
+            <select name="estados" id="estados">
+                <optgroup label="Sudeste">
+                    <option value="SP">São Paulo</option>
+                    <option value="MG" selected>Minas Gerais</option>
+                    <option value="RJ">Rio de Janeiro</option>
+                </optgroup>
+                <option value="PR">Paraná</option>
+                <option value="SC">Santa Cantarina</option>
+                <option value="RS">Rio Grande do Sul</option>
+            </select>
+        </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
