--- a/formulario.html
+++ b/formulario.html
@@ -65,7 +65,7 @@
         </div>
         <div class="form-group">
             <label for="estados"> Estados </label>
-            <select name="estados" id="estados">
+            <select name="estados" id="estados" multiple size="3">
                 <option value="SP">São Paulo</option>
                 <option value="MG" selected>Minas Gerais</option>
                 <option value="RJ">Rio de Janeiro</option>
@@ -74,15 +74,17 @@
 
         <div class="form-group">
             <label for="estados"> Estados </label>
-            <select name="estados" id="estados">
+            <select name="estados" id="estados" multiple size="3">
                 <optgroup label="Sudeste">
                     <option value="SP">São Paulo</option>
                     <option value="MG" selected>Minas Gerais</option>
                     <option value="RJ">Rio de Janeiro</option>
                 </optgroup>
-                <option value="PR">Paraná</option>
-                <option value="SC">Santa Cantarina</option>
-                <option value="RS">Rio Grande do Sul</option>
+                <optgroup label="Sul">
+                    <option value="PR">Paraná</option>
+                    <option value="SC">Santa Cantarina</option>
+                    <option value="RS">Rio Grande do Sul</option>
+                </optgroup>
             </select>
         </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
