--- a/formulario.html
+++ b/formulario.html
@@ -74,7 +74,7 @@
 
         <div class="form-group">
             <label for="estados"> Estados </label>
-            <select name="estados" id="estados" multiple size="3">
+            <select name="estados" id="estados" multiple size="3"><!-- utilado para selecionar mais de uma opção-->
                 <optgroup label="Sudeste">
                     <option value="SP">São Paulo</option>
                     <option value="MG" selected>Minas Gerais</option>
