Inserindo campo de senha no formulário

--- a/formulario.html
+++ b/formulario.html
@@ -87,6 +87,16 @@
                 </optgroup>
             </select>
         </div>
+
+        <input type="hidden" name="id" value="1">
+
+        <div class="form-group">
+            <label for="senha">Senha</label>
+            <input type="password" name="senha" id="senha" class="form-control">
+        </div>
+
+        
+        <div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
       </form>
