Adicionando, mês, semana e hora

--- a/formulario.html
+++ b/formulario.html
@@ -94,7 +94,21 @@
             <label for="senha">Senha</label>
             <input type="password" name="senha" id="senha" class="form-control">
         </div>
+        <!--Inserindo campo de mês e ano-->
+        <div class="form-group">
+            <label for="mes">Mês</label>
+            <input type="month" name="mes" id="mes" class="form-control">
+        </div>
 
+        <div class="form-group">
+            <label for="semana">Semana</label>
+            <input type="week" name="semana" id="semana" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for="hora">Hora</label>
+            <input type="time" name="time" id="time" class="form-control">
+        </div>
         
         <div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
