--- a/formulario.html
+++ b/formulario.html
@@ -106,10 +106,21 @@
         </div>
 
         <div class="form-group">
-            <label for="hora">Hora</label>
+            <label for="time">Hora</label>
             <input type="time" name="time" id="time" class="form-control">
         </div>
+
+        <div class="form-group">
+            <input type="text" list="navegadores">
+            <datalist id="navegadores">
+                <option value="Chrome"></option>
+                <option value="Firefox"></option>
+                <option value="Safari"></option>
+                <option value="Edge"></option>
+            </datalist>
         
+            
+        </div>
         <div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </div>
