--- a/formulario.html
+++ b/formulario.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <title>C. C. Desenvolvedor Web!</title>
+      <title>Curso Completo Desenvolvedor Web!</title>
       <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   </head>
   <body>
@@ -10,7 +10,7 @@
       <form method="post" action="form.php">
           <div class="form-group">
               <label for="nome"> Nome </label>
-              <input type="text" name="nome" id="nome" class="form-control" placeholder="digite o seu nome!" required>
+              <input type="text" name="nome" id="nome" class="form-control" placeholder="digite o seu nome!" required autofocus><!--autufocus já deixa a primeira lacuna ativa-->
           </div>
           <div class="form-group">
             <label for="email"> E-mail </label>
