--- a/formulario.html
+++ b/formulario.html
@@ -10,11 +10,11 @@
       <form method="post" action="form.php">
           <div class="form-group">
               <label for="nome"> Nome </label>
-              <input type="text" name="nome" id="nome" class="form-control" placeholder="digite o seu nome!" required autofocus><!--autufocus já deixa a primeira lacuna ativa-->
+              <input type="text" name="nome" id="nome" class="form-control" placeholder="digite o seu nome!" required autofocus tabindex="1"><!--autufocus já deixa a primeira lacuna ativa-->
           </div>
           <div class="form-group">
             <label for="email"> E-mail </label>
-            <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br!" required>
+            <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br!" required tabindex="2">
         </div>
         <div class="form-group">
             <label for="nascimento"> Nascimento </label>
@@ -45,7 +45,7 @@
         <div>   
         <div class="form-group">
             <label for="ano"> Ano Fabricação </label>
-            <input type="number" name="ano" id="ano" min="1920" step="4" max="2024" value="2024" class="form-control">
+            <input type="number" name="ano" id="ano" min="1920" step="4" max="2024" value="2024" class="form-control" tabindex="3">
         </div> 
         <div class="form-group">
             <label for="cor"> Cor </label>
