add commit tabindex

--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
           </div>
           <div class="form-group">
             <label for="email"> E-mail </label>
-            <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br!" required tabindex="2">
+            <input type="email" name="email" id="email" class="form-control" placeholder="seu@email.com.br!" required tabindex="2"> <!--tabindex serve para ordenar a sequência do tab-->
         </div>
         <div class="form-group">
             <label for="nascimento"> Nascimento </label>
